feat: added html + css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,71 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>Application Support</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f8f8;
+    }
+
+    header {
+      background-color: #007bff;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+    }
+
+    p {
+      margin-bottom: 1rem;
+    }
+
+    .support-email {
+      font-weight: bold;
+      color: #007bff;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #007bff;
+      color: #fff;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
-  <div>Hello World!</div>
+  <header>
+    <h1>Application Support</h1>
+  </header>
+  <div class="container">
+    <p>If you need any assistance or have any questions regarding our application, please feel free to contact our
+      support team via email:</p>
+    <p class="support-email">support@applicationsupport.com</p>
+  </div>
+  <footer>
+    <p>Contact us at: support@applicationsupport.com</p>
+  </footer>
 </body>
 
 </html>
