--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
     <p>If you need any assistance or have any questions regarding our application, please feel free to contact our
       support team via email:</p>
     <p class="support-email">support@applicationsupport.com</p>
+    <a href="mailto: heart.to.heart.helper@gmail.com
+    ">Send Email</a>
+
   </div>
   <footer>
     <p>Contact us at: support@applicationsupport.com</p>
