--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Application Support</title>
+  <title>Heart to Heart Support</title>
+  <link
+    rel="icon"
+    href="https://shapil.github.io./favicon.png"
+  >
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -69,7 +73,7 @@
       support team via email:</p>
     <p class="support-email">support@applicationsupport.com</p>
     <a href="mailto: heart.to.heart.helper@gmail.com
-    ">Send Email</a>
+    ">heart.to.heart.helper@gmail.com</a>
 
   </div>
   <footer>
