--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   >
   <title>Heart to Heart Support</title>
   <link
-    rel="icon"
-    href="https://shapil.github.io./favicon.png"
+    rel="shortcut icon"
+    type="image/x-icon"
+    href="favicon.png"
   >
+
   <style>
     body {
       font-family: Arial, sans-serif;
