--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     rel="shortcut icon"
     type="image/x-icon"
-    href="favicon.png"
+    href="favicon.ico"
   >
 
   <style>
@@ -48,11 +48,6 @@
       margin-bottom: 1rem;
     }
 
-    .support-email {
-      font-weight: bold;
-      color: #007bff;
-    }
-
     footer {
       text-align: center;
       padding: 20px;
@@ -73,7 +68,6 @@
   <div class="container">
     <p>If you need any assistance or have any questions regarding our application, please feel free to contact our
       support team via email:</p>
-    <p class="support-email">support@applicationsupport.com</p>
     <a href="mailto: heart.to.heart.helper@gmail.com
     ">heart.to.heart.helper@gmail.com</a>
 
