--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     rel="shortcut icon"
     type="image/x-icon"
-    href="favicon.ico"
+    href="Shapil.github.io/favicon.ico"
   >
 
   <style>
