--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <body>
   <header>
-    <h1>Application Support</h1>
+    <h1>"Heart to Heart" Application Support</h1>
   </header>
   <div class="container">
     <p>If you need any assistance or have any questions regarding our application, please feel free to contact our
@@ -73,7 +73,8 @@
 
   </div>
   <footer>
-    <p>Contact us at: support@applicationsupport.com</p>
+    <a href="mailto: heart.to.heart.helper@gmail.com
+    ">heart.to.heart.helper@gmail.com</a>
   </footer>
 </body>
 
