--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link
     rel="shortcut icon"
     type="image/x-icon"
-    href="favicon.ico"
+    href="Shapil.github.io/favicon.ico"
   >
 
   <style>
@@ -74,7 +74,7 @@
   </div>
   <footer>
     <a href="mailto: heart.to.heart.helper@gmail.com
-    ">heart.to.heart.helper@gmail.com</a>
+    ">Contact us at: heart.to.heart.helper@gmail.com</a>
   </footer>
 </body>
 
