--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       left: 0;
       width: 100%;
     }
+
+    .footer-link {
+      color: white;
+    }
   </style>
 </head>
 
@@ -67,8 +71,11 @@
 
   </div>
   <footer>
-    <a href="mailto: heart.to.heart.helper@gmail.com
-    ">Contact us at: heart.to.heart.helper@gmail.com</a>
+    <a
+      class="footer-link"
+      href="mailto: heart.to.heart.helper@gmail.com
+    "
+    >Contact us at: heart.to.heart.helper@gmail.com</a>
   </footer>
 </body>
 
